<resources>
    <string name="app_name">LoginActivity</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short" />
    <string name="LOGIN">LOGIN</string>
    <string name="KIRIM">KIRIM</string>
    <string name="title_activity_homekelas">HomekelasActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SI NGUJI SMAPA</string>
    <string name="nav_header_subtitle">nama guru</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_akunsaya">Akun Saya</string>
    <string name="menu_bantuan">Bantuan</string>
    <string name="menu_logout">Logout</string>

    <string name="menu_home">Home</string>

    <string name="home_second">Home Second</string>


    <string name="lupa_password">Lupa Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gambar">gambar</string>
    <string name="jadwalimage">jadwalImage</string>
    <string name="soal">Soal</string>
    <string name="menit">Menit</string>
    <string name="home">Home</string>
    <string name="jadwal">Jadwal</string>
    <string name="laporan">Laporan</string>
    <string name="saya">Saya</string>
    <string name="mulai">MULAI</string>
    <string name="masukkan_token_soal_disini">Masukkan Token Soal disini</string>
    <string name="quiz">QUIZ</string>
    <string name="mata_pelajaran">MATA PELAJARAN</string>

</resources>
