<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="0dp"
    android:paddingLeft="16dp"
    android:paddingBottom="16dp"
    tools:context=".LoginActivity">


    <ImageView
        android:layout_width="800dp"
        android:layout_height="150dp"
        android:layout_marginLeft="250dp"
        android:scaleType="fitXY"
        android:src="@mipmap/nav_atas_foreground" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:padding="0dp"
        app:srcCompat="@mipmap/logo_smapa_foreground"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="24dp"

        android:hint="Username"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="295dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/prompt_password"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"

        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingTop="10dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/idButton"
        android:layout_width="300dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:padding="10dp"
        android:background="@color/colorAccent"
        android:text="@string/LOGIN" />

    <TextView
        android:id="@+id/tvLupaPassword"
        android:layout_width="1500dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="410dp"
        android:text="@string/lupa_password"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textAlignment="center"/>


    <ImageView
        android:layout_width="900dp"
        android:layout_height="600dp"
        android:layout_marginTop="540dp"
        android:layout_marginRight="190dp"
        android:paddingBottom="0dp"
        android:padding="0dp"
        android:scaleType="fitXY"
        android:src="@mipmap/nav_bawah_foreground" />


</RelativeLayout>